<?xml version="1.0" encoding="utf-8"?>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:background="@drawable/background">


		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="5dip" 
			android:paddingBottom="5dip"
			android:gravity="center_horizontal">

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:textColor="#000000"
				android:textStyle="bold" 
				android:id="@+id/endgameResult"
				android:paddingLeft="15dip" 
				android:paddingRight="15dip"
				android:gravity="center_horizontal" />

		</LinearLayout>


		
		<Button
      	android:id="@+id/answerBtn"
        android:layout_width="254dp"
        android:layout_height="35dip"
        android:background="@drawable/button_selector"
        android:text="@string/answers_str" 
        android:textStyle="bold" 
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:layout_marginBottom="6dip"
        android:layout_marginTop="15dip"
        android:textColor="#000000" />
			
			
			
			
		<Button
      	android:id="@+id/finishBtn"
        android:layout_width="254dp"
        android:layout_height="35dip"
        android:background="@drawable/button_selector"
        android:text="@string/main_menu" 
        android:textStyle="bold" 
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:layout_marginBottom="6dip"
        android:textColor="#000000" />

		<ImageView
		    android:id="@+id/imageView2"
		    android:contentDescription="@string/buddha"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="25dip"
		    android:src="@drawable/buddha_trans" />
	
	</LinearLayout>
	

